--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 header{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0,0,0,0.1)) url('background.png');
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.3),rgba(0,0,0,0.1)), url(background.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
 
 nav{
